[package]
name = "blockz"
version = "0.2.2"
description = "Accessible puzzle game with the goal of covering targets with movible blocks."
authors = ["mcb2003 <mikeybuchan@hotmail.co.uk>"]
readme = "README.md"
homepage = "https://github.com/mcb2003/blockz#readme"
repository = "https://github.com/mcb2003/blockz"
license = "MIT"
categories = ["games", "multimedia::audio"]
keywords = ["blind", "tts", "speech", "tile", "puzzle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
olc_pixel_game_engine = "0.5.0"
tts = "0.6.0"
